UIP-2227 : keep cells from squashing when the screen is narrow / fix height-width difference by slightly reducing line-height

--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -134,6 +134,7 @@
         position: relative;
         height: $cell-size;
         width: $cell-size;
+        min-width: $cell-size;
         border-color: $color-white;
     }
 
@@ -153,7 +154,7 @@
 
     &__ylabel {
         padding: 0 15px 0 0;
-        line-height: $cell-size;
+        line-height: $cell-size - 1;
     }
 
     &__cell-color,
